--- a/1 er projet/index.html
+++ b/1 er projet/index.html
@@ -13,6 +13,8 @@
     <textarea id="myTextarea"> </textarea>
 
     <button type="button" onclick="myFunction()">Add</button>
+    <button onclick="myFunctionR()">Remove</button>
+    <input type="checkbox" id="LI" name="LI" checked />
 
     <p id="demo"></p>
   </body>
